[gd_scene load_steps=9 format=2]

[ext_resource path="res://shared/themes/minigame_madness.tres" type="Theme" id=1]
[ext_resource path="res://master/fonts/credits.tres" type="DynamicFont" id=2]
[ext_resource path="res://master/fonts/credits_label.tres" type="DynamicFont" id=3]
[ext_resource path="res://master/fonts/by_line.tres" type="DynamicFont" id=4]
[ext_resource path="res://master/fonts/title_credits.tres" type="DynamicFont" id=5]
[ext_resource path="res://master/images/legal/cc-by.png" type="Texture" id=6]
[ext_resource path="res://master/images/legal/cc0.png" type="Texture" id=7]
[ext_resource path="res://master/scripts/menus/dialogs/credits_dialog.gd" type="Script" id=8]

[node name="CreditsDialog" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 12.0
rect_min_size = Vector2( 620, 460 )
theme = ExtResource( 1 )
script = ExtResource( 8 )

[node name="MinigameMadness" type="Label" parent="."]
margin_right = 620.0
custom_fonts/font = ExtResource( 5 )
text = "Minigame Madness"
align = 1

[node name="bySwashberry" type="Label" parent="MinigameMadness"]
margin_top = 42.0
margin_right = 620.0
margin_bottom = 101.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "a game by
Swashberry"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 101
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 101.0
margin_right = 602.0
margin_bottom = 454.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_right = 592.0
margin_bottom = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 592.0
margin_bottom = 326.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 318.0

[node name="MusicLabel3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "Main Music:"

[node name="MusicAttr3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 248.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = "Spadezer
\"Skippitybop\""

[node name="CCBYButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 248.0
margin_bottom = 88.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="SkippitybopButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 248.0
margin_bottom = 108.0
text = "Listen on Newgrounds!"

[node name="MusicLabel1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 248.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "Boss Music:"

[node name="MusicAttr1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 248.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "Komiku
\"Cat Race Challenge\"
Poupi's incredible adventures !"

[node name="MusicLabel2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 248.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 3 )
text = "Victory Music:"

[node name="MusicAttr2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 248.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 2 )
text = "Loyalty Freak Music
\"Everyone is so alive\"
Robot Dance !"

[node name="CC0Button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 248.0
margin_bottom = 291.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )

[node name="LoyaltyFreakButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 248.0
margin_bottom = 311.0
text = "https://loyaltyfreakmusic.com/"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 252.0
margin_right = 262.0
margin_bottom = 318.0
custom_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 266.0
margin_right = 586.0
margin_bottom = 318.0

[node name="FontsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "Fonts:"

[node name="HalogenLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 22.0
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Halogen by JLH Fonts"

[node name="HeavyEquipmentLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 320.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Heavy Equipment by JLH Fonts"

[node name="JanitorLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 320.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "Janitor by JLH Fonts"

[node name="ModernDOSLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 320.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Modern DOS by Jayvee Enaguas"

[node name="FontsNotice" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )
text = "All fonts used are in the public domain."

[node name="SpecialThanks" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 112.0
margin_right = 320.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 3 )
text = "Special Thanks:"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 134.0
margin_right = 320.0
margin_bottom = 318.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "- To the Godot Engine team
- To my friend Bel
  for the advice & encouragement
- To my brother
  for being my guinea pig
- To Seb
  for everything

Special shoutout to jmtb02, whose Four Second Fury series inspired
Minigame Madness"
autowrap = true

[node name="CloseButton" type="Button" parent="MarginContainer"]
margin_left = 551.0
margin_top = 432.0
margin_right = 602.0
margin_bottom = 454.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CCBYButton" to="." method="_on_CC_BY_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SkippitybopButton" to="." method="_on_SkippitybopButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/CC0Button" to="." method="_on_CC0_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/LoyaltyFreakButton" to="." method="_on_LoyaltyFreakButton_pressed"]
[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
